--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -6,6 +6,14 @@
   year = {2022},
   url = {https://www.R-project.org/},
   }
+  
+@Manual{citeTO,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
+    year = {2022},
+    note = {R package version 0.1.5},
+    url = {https://CRAN.R-project.org/package=opendatatoronto},
+  }
 
 @Article{tidyverse,
   title = {Welcome to the {tidyverse}},
@@ -55,4 +63,10 @@ https://sfirke.github.io/janitor/},
   year = {2016},
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
+  }
+  
+@Manual{apartments,
+  title = {Housing Occupancy Trends},
+  author = {City of Toronto},
+  url = {https://www.toronto.ca/city-government/data-research-maps/research-reports/planning-development/housing-occupancy-trends/}
   }
